--- a/styles/style.css
+++ b/styles/style.css
@@ -140,6 +140,12 @@ body {
   width: 60%;
   margin: 0 auto; }
 
+.hidden {
+  display: none; }
+
+.secHidden {
+  display: none; }
+
 header {
   background-color: papayawhip; }
 
@@ -148,30 +154,3 @@ header {
 
 .mainIngredient img {
   max-width: 20%; }
-
-.result-recipe {
-  background-color: papayawhip;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
-
-.recipe-image {
-  width: 30%;
-  display: block; }
-
-.recipe-info {
-  max-width: 70%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column; }
