--- a/styles/components/_main-about.scss
+++ b/styles/components/_main-about.scss
@@ -1,5 +1,12 @@
 // main about section styles goes here
 
 .about-stamppot {
-    background-color: papayawhip;
+    max-width: 100%;
+    line-height: 30px;
+    text-align: center;
+}
+
+.pan {
+    width: 30%;
+    margin: 0 auto;
 }
