--- a/styles/components/_main-recipe.scss
+++ b/styles/components/_main-recipe.scss
@@ -1,2 +1,54 @@
 // main final recipe section styles goes here
+.result-recipe {
+    background-color:#2875c8;
+    color: white;
+    border: 1px solid red;
+;
+    margin-bottom: 0;
+    height: 100vh;
+    h2 {
+        text-align: center;
+        padding: 20px;
+        margin: 20px 0px;
+    }
+    h4 {
+        margin: 0;
+    }
+}
+
+.recipe-container, .recipe-info {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    // justify-content: space-around;
+}
+
+.recipe.ingredients {
+    width: 40%
+}
+
+.recipe-illustrations {
+    width: 60%;
+    padding-left: 50px;
+}
+
+.recipe-photo {
+    width: 60%;
+}
+
+.recipe-photo, .recipe-method {
+    padding: 20px 20px 20px 0px;
+}
+
+
+.recipe-info {
+    padding-top: 20px;
+    border-top: 1px solid white;
+}
+
+.carouselCell {
+  width: 100% ;
+  margin-right: 10px;
+}
+
 
