--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,1 +1,11 @@
 // footer styles goes here
+
+footer {
+    background-color:white;
+
+     p {
+        color: blue;
+        font-size: 12px;
+        padding: 20px;
+    }
+}
