final version for hand in project

--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -2,10 +2,10 @@
 
 footer {
     background-color:white;
-
      p {
-        color: blue;
+        color: #2875c8;
         font-size: 12px;
-        padding: 20px;
+        padding-top: 60px;
+        padding-bottom: 20px;
     }
 }
