--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,8 +1,7 @@
 // header styles goes here
 
-
 header {
-    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(1, 22, 50, 0.45)), url("./../images/recipe-01.jpg");
+    background-image: linear-gradient(rgba(1, 22, 50, 0.3), rgba(1, 22, 50, 0.45)), url("./../images/recipe-banner.jpg");
     background-color: rgba(1, 22, 50, 0.45);
     background-size: cover;
     background-position: center;
@@ -22,8 +21,15 @@ header {
     }
 }
 
-.fa-arrow-circle-down {
-    font-size: 30px;
-    // text-align: center;
+button {
+    text-decoration: none;
+    border: none;
+    width: 50px;
+    height: 50px;
     margin: 0 auto;
+    border-radius: 50%;
+    .fa-arrow-down {
+        font-size: 30px;
+        color:#2875c8;
+    }
 }
