--- a/styles/components/_main-about.scss
+++ b/styles/components/_main-about.scss
@@ -2,8 +2,13 @@
 
 .about-stamppot {
     max-width: 100%;
-    line-height: 30px;
+    line-height: 40px;
     text-align: center;
+    margin: 0;
+    padding: 100px 0px;
+    font-size: 20px;
+    font-weight: 700;
+    color: #2875c8
 }
 
 .pan {
