--- a/styles/components/_main-recipe.scss
+++ b/styles/components/_main-recipe.scss
@@ -1,11 +1,11 @@
 // main final recipe section styles goes here
+
 .result-recipe {
     background-color:#2875c8;
     color: white;
-    border: 1px solid red;
-;
     margin-bottom: 0;
-    height: 100vh;
+    height: 100%;
+    text-align: left;
     h2 {
         text-align: center;
         padding: 20px;
@@ -16,30 +16,66 @@
     }
 }
 
+.main-carousel {
+    width: 100%;
+    margin: 0 auto;
+}
+
+
 .recipe-container, .recipe-info {
     margin-top: 20px;
     display: flex;
     flex-direction: row;
-    // justify-content: space-around;
 }
 
-.recipe.ingredients {
-    width: 40%
+@media (max-width: 768px) {
+    .result-recipe {
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 480px) {
+    .result-recipe {
+        height: 100%;
+        .recipePhoto {
+         width: 100%;
+         padding: 0;
+        }
+        .recipe-container, 
+        .recipe-info,
+        .recipe-ingredients {
+        margin-top: 20px auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        width: 95%;
+        }
+        .recipe-illustrations {
+            display: none;
+        }
+    }
+}
+
+.recipe-ingredients {
+    width: 40%;
+    line-height: 25px;
 }
 
 .recipe-illustrations {
     width: 60%;
-    padding-left: 50px;
+    padding-left: 10px;
 }
 
-.recipe-photo {
+.recipePhoto {
     width: 60%;
 }
 
-.recipe-photo, .recipe-method {
+.recipePhoto, .recipe-method {
     padding: 20px 20px 20px 0px;
+    line-height: 25px;
 }
-
 
 .recipe-info {
     padding-top: 20px;
